Try to fix alignment for mobile use

--- a/static/css/styles-available_creations.css
+++ b/static/css/styles-available_creations.css
@@ -36,7 +36,7 @@ button {
 .row {
     display: flex;
     flex-wrap: wrap;
-    align-content: center;
+    align-self: center;
 }
   
 .column {
